# filebroker-server

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  default.conf  docker-compose.yml
.cargo/: config.toml
migrations/2022-05-28-194154_initial_user_schema/: down.sql  up.sql
migrations/2022-06-07-164503_initial_post_schema/: down.sql  up.sql
migrations/2022-06-10-231611_post_ancestry_schema/: down.sql  up.sql
migrations/2022-07-09-191920_post_search_overhaul/: down.sql  up.sql
migrations/2022-07-25-123400_initial_broker_schema/: down.sql  up.sql
migrations/2022-08-04-142347_expanded_broker_schema/: down.sql  up.sql
migrations/2022-08-05-161136_thumbnail_schema/: down.sql  up.sql
migrations/2022-08-06-123445_add_more_creation_timestamps/: down.sql  up.sql
migrations/2022-08-06-222417_make_post_data_url_nullable/: down.sql  up.sql
migrations/2022-08-12-164622_permissions_and_groups_schema/: down.sql  up.sql
migrations/2022-08-14-185527_enable_tag_closure_multiple_parents/: down.sql  up.sql
migrations/2022-09-03-163241_restore_tag_closure_self_references/: down.sql  up.sql
migrations/2022-09-24-183448_remove_object_upload_schema/: down.sql  up.sql
migrations/2022-10-02-163705_refactor_permission_schema/: down.sql  up.sql
migrations/2022-10-15-204056_add_post_public_edit/: down.sql  up.sql
migrations/2022-10-21-132826_add_post_description/: up.sql
migrations/2022-12-18-152747_expand_tag_hierarchy_management/: down.sql  up.sql
migrations/2023-01-07-165836_add_s3_object_filename/: down.sql  up.sql
migrations/2023-03-09-190735_add_hls_transcode_schema/: down.sql  up.sql
migrations/2023-03-11-182024_add_hls_toggle/: down.sql  up.sql
migrations/2023-04-02-004414_add_s3_object_locks/: down.sql  up.sql
migrations/2023-04-02-202832_add_hls_stream_bitrates/: down.sql  up.sql
migrations/2023-04-23-231607_add_col_s3_object_thumbnail_disabled/: down.sql  up.sql
migrations/2023-06-10-221930_set_empty_post_strings_to_null/: down.sql  up.sql
migrations/2023-06-12-154054_create_username_case_insensitive_unique_index/: down.sql  up.sql
migrations/2023-06-13-200530_add_mail_schema_and_expand_auth/: down.sql  up.sql
migrations/2023-06-24-190208_create_post_indices/: down.sql  up.sql
migrations/2023-07-15-210229_cleanup_and_additional_indexes/: down.sql  up.sql
migrations/2023-08-12-133933_expand_post_collection_schema/: down.sql  up.sql
migrations/2023-11-05-161547_add_s3_object_indices/: down.sql  up.sql
migrations/2023-11-11-170927_create_deferred_s3_object_deletion/: down.sql  up.sql
migrations/2024-05-14-161852_add_object_metadata_schema/: down.sql  up.sql
migrations/2024-05-16-233627_modify_s3_object_metadata_audio_sample_rate_data_type/: down.sql  up.sql
migrations/2024-05-16-235201_make_s3_object_mandatory_and_add_s3_object_metadata_indices/: down.sql  up.sql
migrations/2024-05-24-153702_make_foreign_keys_on_delete_cascade/: down.sql  up.sql
migrations/2024-05-29-160327_set_empty_broker_strings_to_null/: down.sql  up.sql
migrations/2024-05-31-232056_adjust_metadata_track_and_disc_number/: down.sql  up.sql
migrations/2024-06-27-143038_add_tag_alias_sync_triggers/: down.sql  up.sql
migrations/2024-06-28-170636_expand_ensure_tag_hierarchy_integrity/: down.sql  up.sql
migrations/2024-12-12-222319_add_edit_history_schema/: down.sql  up.sql
migrations/2025-04-24-202504_make_edit_history_foreign_keys_on_delete_cascade/: down.sql  up.sql
migrations/2025-04-24-220835_expand_tag_schema_add_history/: down.sql  up.sql
migrations/2025-06-02-224619_expand_apply_auto_tags_task/: down.sql  up.sql
migrations/2025-06-16-203946_add_broker_enable_presigned_get/: down.sql  up.sql
migrations/2025-08-02-163007_change_user_avatar_model/: down.sql  up.sql
migrations/2025-09-14-045003_expand_user_group_model/: down.sql  up.sql
migrations/2025-12-13-185729-0000_expand_broker_schema/: down.sql  up.sql
migrations/2026-01-02-201339-0000_add_user_based_quota_access_and_broker_limit/: down.sql  up.sql
migrations/2026-03-28-163738_add_reconcile_broker_quota_usage_task/: down.sql  up.sql
migrations/2026-04-10-204641-0000_expand_derived_s3_object_model/: down.sql  up.sql
src/: auth.rs  broker.rs  data.rs  error.rs  mail.rs  main.rs  model.rs  perms.rs  post.rs  query.rs  schema.rs  scratch.sql  scratch1.sql  server.rs  tag.rs  tags.rs  task.rs  user_group.rs  util.rs
src/auth/: captcha.rs
src/broker/: create.rs  update.rs
src/data/: down.rs  encode.rs  s3utils.rs  up.rs
src/data/encode/: avatar.rs  hls.rs  metadata.rs  thumb.rs
src/post/: create.rs  delete.rs  history.rs  update.rs
src/query/: compiler.rs
src/query/compiler/: ast.rs  dict.rs  lexer.rs  parser.rs
src/tag/: auto_matching.rs  create.rs  history.rs  update.rs
src/task/: broker_tasks.rs  object_tasks.rs  tag_tasks.rs
src/user_group/: create.rs  history.rs  invite.rs  update.rs
templates/: email_change_notification.html  email_change_removed.html  email_confirmation.html  macros.html  password_reset.html  welcome.html
