[package]
name = "filebroker-server"
version = "0.5.0"
authors = ["robinfriedli <robinfriedli@icloud.com>"]
edition = "2021"

[features]
default = []
auto_migration = ["diesel_migrations"]

[dependencies]
async-trait = "0.1.56"
bcrypt = "0.15.1"
bigdecimal = "0.4.3"
bytes = "1.2.0"
chrono = { version = "0.4.19", features = ["serde"] }
clokwerk = "0.4.0"
data-encoding = "2.3.2"
diesel = { version = "2.1.6", features = ["chrono", "numeric", "postgres", "r2d2", "uuid"] }
diesel-async = { version = "0.4.1", features = ["postgres", "deadpool"] }
dotenvy = "0.15.7"
downcast-rs = "1.2.0"
exec-rs = "0.1.2"
fern = { version = "0.6.1", features = ["date-based"] }
flurry = "0.5.1"
futures = "0.3.21"
governor = "0.6.3"
iso8601 = "0.6.1"
itertools = "0.12.1"
jsonwebtoken = "9.3.0"
lazy_static = "1.4.0"
lettre = { version = "0.11.7", features = ["dkim"] }
log = "0.4.17"
mime = "0.3.16"
mime_guess = "2.0.4"
mpart-async = "0.7.0"
num_cpus = "1.15.0"
parking_lot = "0.12.1"
passwords = "3.1.13"
percent-encoding = "2.2.0"
pg_interval = "0.4.1"
pin-project = "1.1.5"
rand = "0.8.5"
regex = "1.6.0"
reqwest = { version = "0.12", features = ["json"] }
ring = "0.17.8"
# don't update until https://github.com/durch/rust-s3/issues/346 is fixed
rust-s3 = "0.32.1"
rustls = "0.23.5"
rustls-native-certs = "0.7.0"
rustls-pemfile = "2.1.2"
rusty_pool = "0.7.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
tera = "1.19.0"
thiserror = "1.0.24"
tls-listener = { version = "0.7.0", features = ["native-tls", "rustls", "hyper-h1", "hyper-h2"] }
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7.8"
tokio-postgres-rustls = "0.12.0"
tokio-rustls = "0.26.0"
url = "2.3.1"
uuid = { version = "1.2.1", features = ["v4", "serde"] }
validator = { version = "0.18.1", features = ["derive"] }
warp = { version = "0.3", features = ["tls"] }
webp = "0.3.0"
zxcvbn = "2.2.2"

[dependencies.diesel_migrations]
version = "2.1.0"
optional = true

[target.'cfg(unix)'.dependencies]
nix = { version = "0.28.0", features = ["fs"] }
tempfile = "3.4.0"
