[package]
name = "filebroker-server"
version = "0.8.0"
authors = ["robinfriedli <robinfriedli@icloud.com>"]
edition = "2024"

[features]
default = []
auto_migration = ["diesel_migrations"]

[dependencies]
async-trait = "0.1.56"
bcrypt = "0.17.0"
bigdecimal = "0.4.3"
bytes = "1.2.0"
chrono = { version = "0.4.19", features = ["serde"] }
clokwerk = "0.4.0"
data-encoding = "2.3.2"
diesel = { version = "2.2.9", features = ["64-column-tables", "chrono", "numeric", "postgres", "r2d2", "serde_json", "uuid"] }
diesel-async = { version = "0.5.2", features = ["postgres", "deadpool"] }
dotenvy = "0.15.7"
downcast-rs = "2.0.1"
exec-rs = "0.1.2"
fern = { version = "0.7.1", features = ["date-based"] }
flurry = "0.5.2"
futures = "0.3.21"
governor = "0.10.0"
iso8601 = "0.6.1"
itertools = "0.14.0"
jsonwebtoken = "9.3.0"
lazy_static = "1.4.0"
lettre = { version = "0.11.7", features = ["dkim"] }
log = "0.4.17"
m3u8-rs = "6.0.0"
mime = "0.3.16"
mime_guess = "2.0.4"
mpart-async = "0.7.0"
num_cpus = "1.15.0"
parking_lot = "0.12.3"
passwords = "3.1.13"
percent-encoding = "2.2.0"
pg_interval = "0.4.1"
pin-project = "1.1.5"
rand = "0.9.0"
regex = "1.6.0"
reqwest = { version = "0.12", features = ["json"] }
ring = "0.17.8"
# don't update until https://github.com/durch/rust-s3/issues/346 and https://github.com/durch/rust-s3/issues/404 is fixed
rust-s3 = "=0.32.3"
rustls = "0.23.26"
rustls-native-certs = "0.8.1"
rustls-pemfile = "2.2.0"
rusty_pool = "0.7.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
tera = "1.19.0"
thiserror = "2.0.12"
# cannot upgrade until warp upgrades to hyper 1.0 because newer versions of tls-listener require it, see TlsAcceptorAdapter. This is not commonly used anyway since https is usually handled by nginx and not used for the API server directly.
tls-listener = { version = "0.7.0", features = ["native-tls", "rustls", "hyper-h1", "hyper-h2"] }
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7.8"
tokio-postgres-rustls = "0.13.0"
tokio-rustls = "0.26.2"
url = "2.3.1"
uuid = { version = "1.2.1", features = ["v4", "serde"] }
validator = { version = "0.20.0", features = ["derive"] }
warp = { version = "0.3", features = ["tls"] }
webp = "0.3.0"
zxcvbn = "3.1.0"

[dependencies.diesel_migrations]
version = "2.2.0"
optional = true

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29.0", features = ["fs"] }
tempfile = "3.4.0"
